--- a/src/RiftRunBundle/Resources/config/routing.yml
+++ b/src/RiftRunBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-rift_run_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: RiftRunBundle:Default:index }
+rift_run_wizards:
+    type: rest
+    resource: RiftRunBundle\Controller\WizardsController
