--- a/src/RiftRunBundle/Resources/config/serializer/Wizard.yml
+++ b/src/RiftRunBundle/Resources/config/serializer/Wizard.yml
@@ -1,4 +1,6 @@
 RiftRunBundle\Model\Wizard:
     properties:
         battleTag:
-            serialized_name: battle
+            serialized_name: battleTag
+        paragonPoints:
+            serialized_name: paragonPoints
