--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,7 +83,7 @@ fos_rest:
         rules:
             - { path: '^/', priorities: ['json'], fallback_format: json, prefer_extension: false }
     view:
-        view_response_listener: true
+        view_response_listener: false
     routing_loader:
         default_format: json
         include_format: false
