Database seeder and stuff.

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -44,5 +44,9 @@ monolog:
 assetic:
     use_controller: true
 
+hautelook_alice:
+    locale: en_US   # default
+    seed: 1         # default
+
 #swiftmailer:
 #    delivery_address: me@example.com
