--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+dev_helper:
+    resource: "@DevHelperBundle/Resources/config/routing.yml"
+    prefix:   /
+
 rift_run:
     resource: "@RiftRunBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /v1
