--- a/src/RiftRunBundle/Resources/config/serializer/Character.yml
+++ b/src/RiftRunBundle/Resources/config/serializer/Character.yml
@@ -4,6 +4,8 @@ RiftRunBundle\Model\Character:
             serialized_name: battleTag
         paragonPoints:
             serialized_name: paragonPoints
+        createdAt:
+            serialized_name: createdAt
     relations:
         -
             rel: self
@@ -11,3 +13,4 @@ RiftRunBundle\Model\Character:
                 route: get_wizard
                 parameters:
                     id: expr(object.getId())
+                absolute: true
