--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 	    "nelmio/api-doc-bundle": "dev-master",
 	    "willdurand/hateoas-bundle": "dev-master",
         "hautelook/templated-uri-bundle": "dev-master",
-        "willdurand/rest-extra-bundle": "dev-master"
+        "willdurand/rest-extra-bundle": "dev-master",
+	"pagerfanta/pagerfanta": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
