--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 	    "willdurand/hateoas-bundle": "dev-master",
         "hautelook/templated-uri-bundle": "dev-master",
         "willdurand/rest-extra-bundle": "dev-master",
-	"pagerfanta/pagerfanta": "dev-master"
+	"pagerfanta/pagerfanta": "dev-master",
+	"simple-bus/symfony-bridge": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
