--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,15 @@
         "hautelook/templated-uri-bundle": "dev-master",
         "willdurand/rest-extra-bundle": "dev-master",
 	"pagerfanta/pagerfanta": "dev-master",
-	"simple-bus/symfony-bridge": "dev-master"
+	"simple-bus/symfony-bridge": "dev-master",
+	"simple-bus/doctrine-orm-bridge": "dev-master"	
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
 	    "phpunit/phpunit": "dev-master",
 	    "behat/behat": "dev-master",
 	    "phpspec/phpspec": "dev-master",
+	    "phpspec/prophecy": "dev-master",
         "behat/symfony2-extension": "^2.0",
         "behat/mink-extension": "^2.0",
         "behat/mink-browserkit-driver": "^1.2",
