Test fix. Move test db into its own instance.

--- a/test/Configs/config_test.yml
+++ b/test/Configs/config_test.yml
@@ -1,5 +1,8 @@
 imports:
-    - { resource: config_dev.yml }
+    - { resource: ../../app/config/config_dev.yml }
+    - { resource: ../../app/config/parameters.yml }
+parameters:
+    database_path: '%kernel.root_dir%/../database/riftrun_test.db3'
 
 framework:
     test: ~
