--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Character.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Character.orm.yml
@@ -1,4 +1,5 @@
 RiftRunBundle\Model\Character:
+    repositoryClass: RiftRunBundle\ORM\Repository\CharacterRepository
     type: entity
     table: characters
     id:
