--- a/src/RiftRunBundle/Resources/config/services.yml
+++ b/src/RiftRunBundle/Resources/config/services.yml
@@ -1,7 +1,3 @@
 services:
-    mock_data:
-        class: RiftRunBundle\DataService\MockDataService
-
-#    rift_run.example:
-#        class: RiftRunBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    pagination_factory:
+        class: RiftRunBundle\Factories\PaginationFactory
