--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
@@ -1,6 +1,6 @@
 RiftRunBundle\Entity\CharacterClass:
     type: entity
-    table: null
+    table: characterclass
     repositoryClass: RiftRunBundle\ORM\Repository\CharacterClassRepository
     id:
         id:
