--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -1,6 +1,6 @@
 RiftRunBundle\Entity\Post:
     type: entity
-    table: null
+    table: posts
     repositoryClass: RiftRunBundle\ORM\Repository\PostRepository
     id:
         id:
