--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
@@ -1,6 +1,6 @@
 RiftRunBundle\Entity\SearchQuery:
     type: entity
-    table: null
+    table: searchquery
     repositoryClass: RiftRunBundle\ORM\Repository\SearchQueryRepository
     id:
         id:
