Model draft cont.

--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
@@ -1,4 +1,4 @@
-RiftRunBundle\Entity\CharacterClass:
+RiftRunBundle\Model\CharacterClass:
     type: entity
     table: characterclass
     repositoryClass: RiftRunBundle\ORM\Repository\CharacterClassRepository
