--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -1,4 +1,4 @@
-RiftRunBundle\Entity\Post:
+RiftRunBundle\Model\Post:
     type: entity
     table: posts
     repositoryClass: RiftRunBundle\ORM\Repository\PostRepository
