--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
@@ -1,4 +1,4 @@
-RiftRunBundle\Entity\SearchQuery:
+RiftRunBundle\Model\SearchQuery:
     type: entity
     table: searchquery
     repositoryClass: RiftRunBundle\ORM\Repository\SearchQueryRepository
