--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Grift.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Grift.orm.yml
@@ -1,4 +1,9 @@
 RiftRunBundle\Model\Grift:
     type: entity
     table: null
+    fields:
+        level:
+            type: string
+            length: 255
+            comment: "40+, 50+, 60+, 1%"
     lifecycleCallbacks: {  }
