--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/CharacterClass.orm.yml
@@ -2,6 +2,13 @@ RiftRunBundle\Model\CharacterClass:
     type: entity
     table: characterclass
     repositoryClass: RiftRunBundle\ORM\Repository\CharacterClassRepository
+    manyToOne:
+        searchQuery:
+            targetEntity: SearchQuery
+            inversedBy: lookingFor
+            joinColumn:
+                name: searchquery_id
+                referencedColumnName: id
     id:
         id:
             type: integer
