--- a/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/post_x10.yml
@@ -1,5 +1,24 @@
 include:
     - template.yml
+    - ../Character/template.yml
+    - ../CharacterClass/template.yml
+    - ../GameType/grift_template.yml
+    - ../SearchQuery/template.yml
+
+RiftRunBundle\Model\Character:
+    monks{1..10} (extends character):
+        type: 'monk'
+
+RiftRunBundle\Model\CharacterClass:
+    characterclasses{1..10} (extends characterclass):
+        searchQuery: @searchqueries<current()>
+
+RiftRunBundle\Model\Grift:
+    grifts{1..10} (extends grift): []
+
+RiftRunBundle\Model\SearchQuery:
+    searchqueries{1..10} (extends searchquery):
+        gameType: @grifts<current()>
 
 RiftRunBundle\Model\Post:
     posts{1..10} (extends post):
