--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
@@ -3,7 +3,7 @@ RiftRunBundle\Model\GameType:
     table: gametype
     inheritanceType: JOINED
     discriminatorColumn:
-        name: discr
+        name: type
         type: string
     discriminatorMap:
         gametype: GameType
