--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Grift.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Grift.orm.yml
@@ -1,6 +1,6 @@
 RiftRunBundle\Model\Grift:
     type: entity
-    table: null
+    table: grift
     fields:
         level:
             type: string
