Draft for create database and schema command.

--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -8,3 +8,8 @@ default:
     suites:
         default:
             contexts: [ Test\Integration\Context\FeatureContext ]
+        # get:
+        #     contexts:
+        #         - Test\Integration\Context\FeatureContext
+        #     filters:
+        #         tags: '@get'
