--- a/src/DevHelperBundle/Resources/config/services.yml
+++ b/src/DevHelperBundle/Resources/config/services.yml
@@ -15,6 +15,11 @@ services:
         tags:
             - { name: command_handler, handles: DevHelperBundle\Command\Commands\ClearDatabase }
 
+    create_schema_command_handler:
+        class: DevHelperBundle\Command\Handlers\CreateSchemaCommandHandler
+        tags:
+            - { name: command_handler, handles: DevHelperBundle\Command\Commands\CreateSchema }
+
     load_fixtures_cli:
         class: DevHelperBundle\Cli\DatabaseSeederCommand
         tags:
