--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -12,6 +12,7 @@ default:
                     doctrine: @doctrine
                     commandBus: @command_bus
                     fixtureNumber: 1000
+                    typeOfFixture: posts
         # get:
         #     contexts:
         #         - Test\Integration\Context\FeatureContext
