--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "behat/mink-extension": "^2.0",
         "behat/mink-browserkit-driver": "^1.2",
         "fzaninotto/faker": "^1.4",
-        "hautelook/alice-bundle": "dev-master"
+        "hautelook/alice-bundle": "dev-master",
+	"phpunit/phpunit-mock-objects": "dev-master"
     },
     "scripts": {
         "post-root-package-install": [
