Renamed stuff. Fixing phpspec.

--- a/test/integration/behat.yml
+++ b/test/integration/behat.yml
@@ -8,7 +8,7 @@ default:
     suites:
         default:
             contexts:
-                - Test\Integration\Context\FeatureContext:
+                - Test\Integration\Context\ApiContext:
                     doctrine: @doctrine
         # get:
         #     contexts:
