--- a/src/DevHelperBundle/Resources/config/services.yml
+++ b/src/DevHelperBundle/Resources/config/services.yml
@@ -7,7 +7,14 @@ services:
         arguments:
             - @doctrine.orm.entity_manager
         tags:
-            - { name: command_handler, handles: DevHelperBundle\Command\Commands\LoadFixtures }
+            - { name: tactician.handler, command: DevHelperBundle\Command\Commands\LoadFixtures }
+
+    # load_fixtures_command_handler:
+    #     class: DevHelperBundle\Command\Handlers\LoadFixturesCommandHandler
+    #     arguments:
+    #         - @doctrine.orm.entity_manager
+    #     tags:
+    #         - { name: command_handler, handles: DevHelperBundle\Command\Commands\LoadFixtures }
 
     clear_fixtures_command_handler:
         class: DevHelperBundle\Command\Handlers\DatabaseClearCommandHandler
@@ -15,17 +22,17 @@ services:
             - @doctrine.orm.entity_manager
             - @standard_orm_purger
         tags:
-            - { name: command_handler, handles: DevHelperBundle\Command\Commands\ClearDatabase }
+            - { name: tactician.handler, command: DevHelperBundle\Command\Commands\ClearDatabase }
 
     create_schema_command_handler:
         class: DevHelperBundle\Command\Handlers\CreateSchemaCommandHandler
         tags:
-            - { name: command_handler, handles: DevHelperBundle\Command\Commands\CreateSchema }
+            - { name: tactician.handler, command: DevHelperBundle\Command\Commands\CreateSchema }
 
     update_schema_command_handler:
         class: DevHelperBundle\Command\Handlers\UpdateSchemaCommandHandler
         tags:
-            - { name: command_handler, handles: DevHelperBundle\Command\Commands\UpdateSchema }
+            - { name: tactician.handler, command: DevHelperBundle\Command\Commands\UpdateSchema }
 
     load_fixtures_cli:
         class: DevHelperBundle\Cli\DatabaseSeederCommand
