--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -14,6 +14,7 @@ RiftRunBundle\Model\Post:
             joinColumn:
                 name: searchquery_id
                 referencedColumnName: id
+                nullable: true
             fetch: LAZY
     id:
         id:
