--- a/src/RiftRunBundle/Resources/config/serializer/Post.yml
+++ b/src/RiftRunBundle/Resources/config/serializer/Post.yml
@@ -2,6 +2,8 @@ RiftRunBundle\Model\Post:
     properties:
         createdAt:
             serialized_name: createdAt
+        # query:
+        #     exclude: true
     relations:
         -
             rel: self
