JMS serializer crap.

--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -8,14 +8,16 @@ RiftRunBundle\Model\Post:
             joinColumn:
                 name: player_id
                 referencedColumnName: id
-            fetch: LAZY
+                fetch: EAGER
+            fetch: EAGER
         query:
             targetEntity: SearchQuery
             joinColumn:
                 name: searchquery_id
                 referencedColumnName: id
                 nullable: true
-            fetch: LAZY
+                fetch: EAGER
+            fetch: EAGER
     id:
         id:
             type: integer
