--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/Post.orm.yml
@@ -16,7 +16,7 @@ RiftRunBundle\Model\Post:
                 name: searchquery_id
                 referencedColumnName: id
                 nullable: true
-            fetch: EAGER
+            fetch: LAZY
     id:
         id:
             type: integer
