--- a/test/Fixtures/DatabaseSeeder/Post/template.yml
+++ b/test/Fixtures/DatabaseSeeder/Post/template.yml
@@ -1,3 +1,3 @@
 RiftRunBundle\Model\Post:
     post (template):
-        createdAt: <dateTime($max = 'now')>
+        createdAt: <dateTimeThisMonth($max = 'now')>
