--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/SearchQuery.orm.yml
@@ -7,6 +7,7 @@ RiftRunBundle\Model\SearchQuery:
             joinColumn:
                 name: gametype_id
                 referencedColumnName: id
+            cascade: [ persist ]
     oneToMany:
         characterClass:
             targetEntity: CharacterClass
@@ -22,6 +23,4 @@ RiftRunBundle\Model\SearchQuery:
         minParagon:
             type: integer
             column: MinParagon
-        createdAt:
-            type: datetimetz
     lifecycleCallbacks: {  }
