--- a/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
+++ b/src/RiftRunBundle/Resources/config/doctrine/riftrun/GameType.orm.yml
@@ -5,9 +5,11 @@ RiftRunBundle\Model\GameType:
     discriminatorColumn:
         name: type
         type: string
+        cascade: [ persist ]
     discriminatorMap:
         gametype: GameType
         grift: Grift
+    cascade: [ persist ]
     id:
         id:
             type: integer
